//
//  Constants.swift
//  emojis
//
//  Created by Yuri Pedroso on 09/04/21.
//

import Foundation

struct Constants {
    // MARK: - Avatar
    static let avatarList = "avatarList"
    static let avatar = "avatarList"
    
    // MARK: - Emoji
    static let searchField = "searchField"
    static let searchFieldError = "Search bar text is empty. Insert an user and try again!"
    static let searchBarBackground = "UISearchBarBackground"
    
    // MARK: - EmojiList
    static let emojiList = "emojiList"
    
    // MARK: - Repos
    static let reposList = "reposList"
    
    // MARK: - Base
    static let indicator = "indicator"
    static let titleError = "Error 🥺"
    
    // MARK: - Views
    static let cell = "cell"
    static let header = "header"
    static let cells = "cells"
    static let okButton = "OK"
    
}
